--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-coefficients.json
 .venv
 .idea
 requirements.txt
@@ -8,3 +7,5 @@ libs/utils/__pycache__
 libs/__pycache__
 */__pycache__
 __pycache__
+t.py
+.mypy_cache
