--- a/configurations/train_configurations.json
+++ b/configurations/train_configurations.json
@@ -2,6 +2,6 @@
   "learning_rate": 0.9,
   "dataset": "data.csv",
   "coefs_start": "random",
-  "visualisation_graphic": false,
-  "visualisation_train": false
+  "visualisation_graphic": true,
+  "visualisation_train": true
 }
