update linear regression. update python version in pyptoject.toml

--- a/configurations/train_configurations.json
+++ b/configurations/train_configurations.json
@@ -3,5 +3,5 @@
   "dataset": "data.csv",
   "coefs_start": "random",
   "visualisation_graphic": true,
-  "visualisation_train": true
+  "visualisation_train": false
 }
